# invenio-rdm-records

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  _setup.cfg  babel.ini  constraints-pypi.txt  invenio-vocabularies-id-mapping-issue.md  pyproject.toml  pytest.ini  requirements-devel.txt  requirements-feature.txt  run-i18n-tests.sh  run-js-linter.sh  run-js-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  i18n-pull.yml  i18n-push.yml  pypi-publish.yml  stale.yml  tests-feature.yml  tests.yml  translations.yml
.tx/: config
.venv-module/: pyvenv.cfg
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: app.py
invenio_rdm_records/: __init__.py  cli.py  components.py  config.py  ext.py  handlers.py  links.py  metadata_extensions.py  models.py  oai.py  permissions.py  pid_manager.py  proxies.py  resources.py  search.py  searchconfig.py  serializers.py  services.py  tasks.py  utils.py  version.py  views.py  webpack.py
invenio_rdm_records/access_requests_ui/: __init__.py  views.py
invenio_rdm_records/administration/: __init__.py
invenio_rdm_records/alembic/: 0cf260eb8e97_create_table_for_secret_links.py  1746626978_drop_rdmrecordquota_user_id_unique_.py  1777274324_merge_pidrelations_tables_removal.py  1777278349_column_defaults_and_files_indices.py  1780576627_create_record_id_index_in_rdm_parents_community.py  2186256e8d9b_add_deletion_status_to_rdmrecords.py  425b691f768b_create_collections_tables.py  4a15e8671f4d_create_rdm_records_tables.py  82e1b238acca_drop_unique_user_record_quota.py  88d1463de5c0_create_parent_record_table.py  8ed1a438601c_migrate_secret_links.py  912251a56a49_change_datetime_types.py  9e0ac518b9df_create_records_communities_m2m_table.py  __init__.py  a2a6819f14f1_create_files_and_media_files_versioning_.py  a3957490361d_remove_pidrelations_tables.py  a6bfa06b1a6d_add_origin_and_description_to_secret_links.py  b822ba22c688_create_rdm_records_branch.py  cfcb8cb78708_create_access_request_tokens_table.py  faf0cefa79a0_create_record_quota_tables.py  ff860d48fb4b_create_media_files_table.py  ff9bec971d30_add_indexes.py  ffd725001655_add_field_to_record_consent_to_share_.py
invenio_rdm_records/auditlog/: __init__.py  actions.py  context.py
invenio_rdm_records/checks/: __init__.py  requests.py
invenio_rdm_records/collections/: __init__.py  api.py  config.py  errors.py  links.py  models.py  results.py  schema.py  searchapp.py  service.py  tasks.py
invenio_rdm_records/contrib/: __init__.py
invenio_rdm_records/custom_fields/: __init__.py  base.py  registry.py  text.py  vocabulary.py
invenio_rdm_records/data/: objecttypes.json
invenio_rdm_records/external_pids/: __init__.py  providers.py
invenio_rdm_records/fixtures/: __init__.py  affiliations.py  communities.py  demo.py  fixture.py  pages.py  records.py  static_pages.py  subjects.py  tasks.py  users.py  vocabularies.py
invenio_rdm_records/jobs/: __init__.py  jobs.py
invenio_rdm_records/jsonschemas/: __init__.py
invenio_rdm_records/links/: __init__.py  models.py  permissions.py  serializers.py  signals.py
invenio_rdm_records/loaders/: __init__.py
invenio_rdm_records/mappings/: __init__.py
invenio_rdm_records/marshmallow/: __init__.py  fields.py  json.py  utils.py
invenio_rdm_records/notifications/: __init__.py  builders.py  events.py  generators.py  utils.py  vcs.py
invenio_rdm_records/oaiserver/: __init__.py
invenio_rdm_records/ocfl/: __init__.py
invenio_rdm_records/records/: __init__.py  api.py  custom_fields.py  dumpers.py  models.py
invenio_rdm_records/requests/: __init__.py  base.py  community_inclusion.py  community_submission.py  community_transfer.py  decorators.py  entity_resolvers.py  file_modification.py  permissions.py  quota_increase.py  record_deletion.py  resolver.py  subcommunities.py
invenio_rdm_records/resources/: __init__.py  args.py  config.py  errors.py  iiif.py  links.py  resources.py  responses.py  schemas_links.py  serializers.py  urls.py  utils.py
invenio_rdm_records/schemas/: __init__.py  access.py  communities.py  files.py  links.py  metadata.py  pids.py  relations.py  stats.py  utils.py
invenio_rdm_records/secret_links/: __init__.py  errors.py  models.py  permissions.py  serializers.py  signals.py
invenio_rdm_records/serializers/: __init__.py  datacite.py
invenio_rdm_records/services/: __init__.py  components.py  config.py  custom_fields.py  customizations.py  decorators.py  deletion_policy.py  dummy.py  errors.py  facets.py  generators.py  links.py  permissions.py  queryparser.py  request_policies.py  result_items.py  results.py  search_params.py  services.py  sort.py  tasks.py
invenio_rdm_records/stats/: __init__.py  event_builders.py  permissions.py  utils.py
invenio_rdm_records/theme/: __init__.py  views.py  webpack.py
invenio_rdm_records/tokens/: __init__.py  errors.py  permissions.py  resource_access.py  scopes.py
invenio_rdm_records/translations/: messages.pot
invenio_rdm_records/vocabularies/: __init__.py  access_right.csv  access_right.py  awards.py  contributor_role.csv  contributor_role.py  convert_to_new_vocabulary.py  creatibutor_role.py  creator_role.csv  license.py  resource_type.py  resource_types.csv  title_type.csv  title_type.py  utils.py  views.py  vocabularies.py  vocabulary.py
tests/: __init__.py  conftest.py  fake_crossref_client.py  fake_datacite_client.py  helpers.py  test_alembic.py  test_cli.py  test_examples_app.py  test_handlers.py  test_invenio_rdm_records.py  test_oai.py
tests/api/: conftest.py  test_api_flow.py  test_demo_cli.py  test_elasticsearch_mapping.py  test_jsonschema.py  test_schemas_json_dump.py  test_schemas_json_load.py  test_serializers.py
tests/api-resources/: conftest.py  test_resources.py  test_resources_serializers.py
tests/collections/: __init__.py  test_collections_api.py  (+1 more)
(+1057 files in other folders)
