# SPDX-FileCopyrightText: 2019-2026 CERN.
# SPDX-FileCopyrightText: 2019-2022 Northwestern University.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2022-2026 TU Wien.
# SPDX-FileCopyrightText: 2022 Universität Hamburg.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-rdm-records"
description = "InvenioRDM module for the communities feature."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CERN", email = "info@inveniosoftware.org" }]
keywords = ["data", "invenio", "model", "rdm"]
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = [
  "arrow>=0.17.0",
  "babel-edtf>=1.2.0",
  "citeproc-py>=0.6.0",
  "citeproc-py-styles>=0.1.2,<1.0.0",
  "commonmeta-py>=0.268,<1.0.0",
  "datacite>=1.1.1,<2.0.0",
  "dcxml>=0.1.2,<1.0.0",
  "faker>=2.0.3",
  "flask-iiif>=2.0.0,<3.0.0",
  "invenio-administration>=7.0.0,<8.0.0",
  "invenio-audit-logs>=4.0.0,<5.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-checks>=11.0.0,<12.0.0",
  "invenio-collections>=10.0.0,<11.0.0",
  "invenio-communities>=29.0.0,<30.0.0",
  "invenio-drafts-resources>=11.0.0,<12.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-jobs>=11.0.0,<12.0.0",
  "invenio-oaiserver>=6.0.0,<7.0.0",
  "invenio-oauth2server>=6.0.0,<7.0.0",
  "invenio-records-resources>=11.0.0,<12.0.0",
  "invenio-stats>=7.0.0,<8.0.0",
  "invenio-vocabularies>=14.0.0,<15.0.0",
  "nameparser>=1.1.1",
  "pycountry>=22.3.5",
  "pydash>=6.0.0,<7.0.0",
  "python-slugify>=8.0.1",
  "pytz>=2020.4",
  "pyyaml>=5.4.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-rdm-records"

[project.entry-points."flask.commands"]
rdm-records = "invenio_rdm_records.cli:rdm_records"

[project.entry-points."invenio_administration.views"]
invenio_rdm_records_details = "invenio_rdm_records.administration.views.oai:OaiPmhDetailView"
invenio_rdm_records_oai_create = "invenio_rdm_records.administration.views.oai:OaiPmhCreateView"
invenio_rdm_records_oai_edit = "invenio_rdm_records.administration.views.oai:OaiPmhEditView"
invenio_rdm_records_oai_list = "invenio_rdm_records.administration.views.oai:OaiPmhListView"

[project.entry-points."invenio_assets.webpack"]
invenio_rdm_records = "invenio_rdm_records.webpack:theme"

[project.entry-points."invenio_audit_logs.actions"]
"draft.access_settings_update" = "invenio_rdm_records.auditlog.actions:RDMDraftAccessSettingsAuditLog"
"draft.grant_update" = "invenio_rdm_records.auditlog.actions:RDMDraftGrantAuditLog"
"draft.secret_link_update" = "invenio_rdm_records.auditlog.actions:RDMDraftSecretLinkAuditLog"
"file.create" = "invenio_rdm_records.auditlog.actions:FileCreateAuditLog"
"file.delete" = "invenio_rdm_records.auditlog.actions:FileDeleteAuditLog"
"record.access_settings_update" = "invenio_rdm_records.auditlog.actions:RDMRecordAccessSettingsAuditLog"
"record.grant_update" = "invenio_rdm_records.auditlog.actions:RDMRecordGrantAuditLog"
"record.secret_link_update" = "invenio_rdm_records.auditlog.actions:RDMRecordSecretLinkAuditLog"

[project.entry-points."invenio_base.api_apps"]
invenio_rdm_records = "invenio_rdm_records:InvenioRDMRecords"

[project.entry-points."invenio_base.api_blueprints"]
invenio_iiif = "invenio_rdm_records.views:create_iiif_bp"
invenio_oaipmh_server = "invenio_rdm_records.views:create_oaipmh_server_blueprint_from_app"
invenio_rdm_community_records = "invenio_rdm_records.views:create_community_records_bp"
invenio_rdm_record_communities = "invenio_rdm_records.views:create_record_communities_bp"
invenio_rdm_record_requests = "invenio_rdm_records.views:create_record_requests_bp"
invenio_rdm_records = "invenio_rdm_records.views:create_records_bp"
invenio_rdm_records_community_collections = "invenio_rdm_records.views:create_community_collections_bp"
invenio_rdm_records_draft_files = "invenio_rdm_records.views:create_draft_files_bp"
invenio_rdm_records_draft_media_files = "invenio_rdm_records.views:create_draft_media_files_bp"
invenio_rdm_records_ext = "invenio_rdm_records.views:blueprint"
invenio_rdm_records_group_access = "invenio_rdm_records.views:create_grant_group_access_bp"
invenio_rdm_records_parent_grants = "invenio_rdm_records.views:create_parent_grants_bp"
invenio_rdm_records_parent_links = "invenio_rdm_records.views:create_parent_record_links_bp"
invenio_rdm_records_record_files = "invenio_rdm_records.views:create_record_files_bp"
invenio_rdm_records_record_media_files = "invenio_rdm_records.views:create_record_media_files_bp"
invenio_rdm_records_user_access = "invenio_rdm_records.views:create_grant_user_access_bp"

[project.entry-points."invenio_base.api_finalize_app"]
invenio_rdm_records = "invenio_rdm_records.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
invenio_rdm_records = "invenio_rdm_records:InvenioRDMRecords"

[project.entry-points."invenio_base.blueprints"]
invenio_rdm_records_ext = "invenio_rdm_records.views:blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_rdm_records = "invenio_rdm_records.ext:finalize_app"

[project.entry-points."invenio_celery.tasks"]
invenio_rdm_records_access_requests = "invenio_rdm_records.requests.access.tasks"
invenio_rdm_records_collections = "invenio_rdm_records.collections.tasks"
invenio_rdm_records_fixtures = "invenio_rdm_records.fixtures.tasks"
invenio_rdm_records_iiif = "invenio_rdm_records.services.iiif.tasks"
invenio_rdm_records_services = "invenio_rdm_records.services.tasks"
invenio_rdm_records_user_moderation = "invenio_rdm_records.requests.user_moderation.tasks"

[project.entry-points."invenio_db.alembic"]
invenio_rdm_records = "invenio_rdm_records:alembic"

[project.entry-points."invenio_db.models"]
invenio_rdm_records = "invenio_rdm_records.records.models"

[project.entry-points."invenio_i18n.translations"]
invenio_rdm_records = "invenio_rdm_records"

[project.entry-points."invenio_jobs.jobs"]
update_expired_embargos = "invenio_rdm_records.jobs.jobs:update_expired_embargos_cls"

[project.entry-points."invenio_jsonschemas.schemas"]
invenio_rdm_records = "invenio_rdm_records.records.jsonschemas"

[project.entry-points."invenio_oauth2server.scopes"]
tokens_generate_scope = "invenio_rdm_records.tokens.scopes:tokens_generate_scope"

[project.entry-points."invenio_requests.entity_resolvers"]
email = "invenio_rdm_records.requests.entity_resolvers:EmailResolver"
records = "invenio_rdm_records.requests.entity_resolvers:RDMRecordResolver"

[project.entry-points."invenio_requests.types"]
community_inclusion = "invenio_rdm_records.requests.community_inclusion:get_request_type"
community_submission = "invenio_rdm_records.requests.community_submission:get_request_type"
file_modification = "invenio_rdm_records.requests.file_modification:get_request_type"
guest_access_request = "invenio_rdm_records.requests:GuestAccessRequest"
quota_increase = "invenio_rdm_records.requests.quota_increase:get_request_type"
record_deletion = "invenio_rdm_records.requests.record_deletion:get_request_type"
user_access_request = "invenio_rdm_records.requests:UserAccessRequest"

[project.entry-points."invenio_search.mappings"]
rdmrecords = "invenio_rdm_records.records.mappings"

[project.entry-points."invenio_users_resources.moderation.actions"]
approve = "invenio_rdm_records.requests.user_moderation.actions:on_approve"
block = "invenio_rdm_records.requests.user_moderation.actions:on_block"
restore = "invenio_rdm_records.requests.user_moderation.actions:on_restore"

[project.optional-dependencies]
elasticsearch7 = ["invenio-search[elasticsearch7]>=3.0.0,<4.0.0"]
opensearch1 = ["invenio-search[opensearch1]>=3.0.0,<4.0.0"]
opensearch2 = ["invenio-search[opensearch2]>=3.0.0,<4.0.0"]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "invenio-github>=7.0.0,<8.0.0",
  "invenio-vcs>=0.4.0,<1.0.0",
  "psutil>=7.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "pytest-mock>=1.6.0",
  "sphinx>=4.5.0",
  "tripoli>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_rdm_records/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_rdm_records/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_rdm_records/translations/messages.pot"
output_dir = "invenio_rdm_records/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_rdm_records/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/invenio_rdm_records"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401,D403"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_rdm_records --cov-report=term-missing'
filterwarnings = ["ignore::marshmallow.warnings.RemovedInMarshmallow4Warning"]
testpaths = "tests invenio_rdm_records"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ],
]
