# -*- coding: utf-8 -*-
#
# Copyright (C) 2019 CERN.
# Copyright (C) 2019 Northwestern University.
# Copyright (C) 2022 Universität Hamburg.
#
# Invenio-RDM-Records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-rdm-records
version = attr: invenio_rdm_records.__version__
description = "InvenioRDM module for the communities feature."
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm data model
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-rdm-records
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    arrow>=0.17.0
    citeproc-py-styles>=0.1.2
    citeproc-py>=0.6.0
    datacite>=1.1.1
    dcxml>=0.1.2
    Faker>=2.0.3
    flask-iiif>=0.6.2
    ftfy>=4.4.3,<5.0.0
    importlib_metadata>=4.4;python_version<'3.8'
    invenio-communities>=2.8.0.dev28,<2.9.0
    invenio-drafts-resources>=0.16.1,<0.17.0
    invenio-oaiserver>=1.4.0
    invenio-vocabularies>=0.11.4,<0.12.0
    pytz>=2020.4
    pyyaml>=5.4.0

[options.extras_require]
tests =
    invenio-app>=1.3.4
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
    pytest-invenio>=1.4.7
    pytest-mock>=1.6.0
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
flask.commands =
    rdm-records = invenio_rdm_records.cli:rdm_records
invenio_base.apps =
    invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
invenio_base.api_apps =
    invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
invenio_base.api_blueprints =
    invenio_rdm_records = invenio_rdm_records.views:create_records_bp
    invenio_rdm_records_draft_files = invenio_rdm_records.views:create_draft_files_bp
    invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
    invenio_rdm_records_parent_links = invenio_rdm_records.views:create_parent_record_links_bp
    invenio_rdm_records_record_files = invenio_rdm_records.views:create_record_files_bp
    invenio_oaipmh_server = invenio_rdm_records.views:create_oaipmh_server_blueprint_from_app
    invenio_iiif = invenio_rdm_records.views:create_iiif_bp
invenio_base.blueprints =
    invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
invenio_celery.tasks =
    invenio_rdm_records_fixtures = invenio_rdm_records.fixtures.tasks
    invenio_rdm_records_services = invenio_rdm_records.services.tasks
invenio_db.models =
    invenio_rdm_records = invenio_rdm_records.records.models
invenio_db.alembic =
    invenio_rdm_records = invenio_rdm_records:alembic
invenio_jsonschemas.schemas =
    invenio_rdm_records = invenio_rdm_records.records.jsonschemas
invenio_search.mappings =
    rdmrecords = invenio_rdm_records.records.mappings
invenio_i18n.translations =
    invenio_rdm_records = invenio_rdm_records
invenio_requests.types =
    community_submission = invenio_rdm_records.requests:CommunitySubmission
invenio_requests.entity_resolvers =
    records = invenio_rdm_records.requests.resolver:RDMRecordResolver

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = invenio_rdm_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_rdm_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_rdm_records/translations/messages.pot
output-dir = invenio_rdm_records/translations/

[update_catalog]
input-file = invenio_rdm_records/translations/messages.pot
output-dir = invenio_rdm_records/translations/
