# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2025 CERN.
# Copyright (C) 2019 Northwestern University.
# Copyright (C) 2022 Universität Hamburg.
# Copyright (C) 2022-2026 Graz University of Technology.
#
# Invenio-RDM-Records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-rdm-records
version = attr: invenio_rdm_records.__version__
description = InvenioRDM module for the communities feature.
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm data model
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-rdm-records
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.17.0
    babel-edtf>=1.2.0
    citeproc-py-styles>=0.1.2,<1.0.0
    citeproc-py>=0.6.0
    commonmeta-py>=0.8.4,<0.182
    datacite>=1.1.1,<2.0.0
    dcxml>=0.1.2,<1.0.0
    Faker>=2.0.3
    flask-iiif>=2.0.0,<3.0.0
    invenio-administration>=5.0.0,<6.0.0
    invenio-base>=2.3.0,<3.0.0
    invenio-checks>=4.0.0,<5.0.0
    invenio-communities>=23.0.0,<24.0.0
    invenio-drafts-resources>=8.0.0,<9.0.0
    invenio-records-resources>=9.0.0,<10.0.0
    invenio-github>=5.0.0,<6.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-jobs>=7.0.0,<8.0.0
    invenio-oaiserver>=4.0.0,<5.0.0
    invenio-oauth2server>=4.0.0,<5.0.0
    invenio-stats>=6.0.0,<7.0.0
    invenio-vocabularies>=10.0.0,<11.0.0
    nameparser>=1.1.1
    pycountry>=22.3.5
    pydash>=6.0.0,<7.0.0
    pytz>=2020.4
    pyyaml>=5.4.0
    python-slugify>=8.0.1

[options.extras_require]
tests =
    pytest-black>=0.6.0
    invenio-app>=3.0.0,<4.0.0
    invenio-db[postgresql,mysql]>=2.2.0,<3.0.0
    pytest-invenio>=4.0.0,<5.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
    tripoli>=2.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
flask.commands =
    rdm-records = invenio_rdm_records.cli:rdm_records
invenio_base.apps =
    invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
invenio_base.api_apps =
    invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
invenio_base.blueprints =
    invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
invenio_base.api_blueprints =
    invenio_rdm_records = invenio_rdm_records.views:create_records_bp
    invenio_rdm_records_draft_files = invenio_rdm_records.views:create_draft_files_bp
    invenio_rdm_records_draft_media_files = invenio_rdm_records.views:create_draft_media_files_bp
    invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
    invenio_rdm_records_parent_links = invenio_rdm_records.views:create_parent_record_links_bp
    invenio_rdm_records_parent_grants = invenio_rdm_records.views:create_parent_grants_bp
    invenio_rdm_records_user_access = invenio_rdm_records.views:create_grant_user_access_bp
    invenio_rdm_records_group_access = invenio_rdm_records.views:create_grant_group_access_bp
    invenio_rdm_records_record_files = invenio_rdm_records.views:create_record_files_bp
    invenio_rdm_records_record_media_files = invenio_rdm_records.views:create_record_media_files_bp
    invenio_rdm_community_records = invenio_rdm_records.views:create_community_records_bp
    invenio_oaipmh_server = invenio_rdm_records.views:create_oaipmh_server_blueprint_from_app
    invenio_rdm_record_communities = invenio_rdm_records.views:create_record_communities_bp
    invenio_rdm_record_requests = invenio_rdm_records.views:create_record_requests_bp
    invenio_iiif = invenio_rdm_records.views:create_iiif_bp
invenio_base.finalize_app =
    invenio_rdm_records = invenio_rdm_records.ext:finalize_app
invenio_base.api_finalize_app =
    invenio_rdm_records = invenio_rdm_records.ext:api_finalize_app
invenio_celery.tasks =
    invenio_rdm_records_fixtures = invenio_rdm_records.fixtures.tasks
    invenio_rdm_records_services = invenio_rdm_records.services.tasks
    invenio_rdm_records_access_requests = invenio_rdm_records.requests.access.tasks
    invenio_rdm_records_iiif = invenio_rdm_records.services.iiif.tasks
    invenio_rdm_records_user_moderation = invenio_rdm_records.requests.user_moderation.tasks
invenio_db.models =
    invenio_rdm_records = invenio_rdm_records.records.models
invenio_db.alembic =
    invenio_rdm_records = invenio_rdm_records:alembic
invenio_jsonschemas.schemas =
    invenio_rdm_records = invenio_rdm_records.records.jsonschemas
invenio_search.mappings =
    rdmrecords = invenio_rdm_records.records.mappings
invenio_i18n.translations =
    invenio_rdm_records = invenio_rdm_records
invenio_requests.types =
    community_inclusion = invenio_rdm_records.requests.community_inclusion:get_request_type
    community_submission = invenio_rdm_records.requests.community_submission:get_request_type
    user_access_request = invenio_rdm_records.requests:UserAccessRequest
    guest_access_request = invenio_rdm_records.requests:GuestAccessRequest
    record_deletion = invenio_rdm_records.requests.record_deletion:get_request_type
    file_modification = invenio_rdm_records.requests.file_modification:get_request_type
invenio_requests.entity_resolvers =
    records = invenio_rdm_records.requests.entity_resolvers:RDMRecordResolver
    email = invenio_rdm_records.requests.entity_resolvers:EmailResolver
invenio_administration.views =
    invenio_rdm_records_oai_list = invenio_rdm_records.administration.views.oai:OaiPmhListView
    invenio_rdm_records_oai_edit = invenio_rdm_records.administration.views.oai:OaiPmhEditView
    invenio_rdm_records_oai_create = invenio_rdm_records.administration.views.oai:OaiPmhCreateView
    invenio_rdm_records_details = invenio_rdm_records.administration.views.oai:OaiPmhDetailView
invenio_assets.webpack =
    invenio_rdm_records = invenio_rdm_records.webpack:theme
invenio_oauth2server.scopes =
    tokens_generate_scope = invenio_rdm_records.tokens.scopes:tokens_generate_scope
invenio_users_resources.moderation.actions =
    block = invenio_rdm_records.requests.user_moderation.actions:on_block
    restore = invenio_rdm_records.requests.user_moderation.actions:on_restore
    approve = invenio_rdm_records.requests.user_moderation.actions:on_approve
invenio_jobs.jobs =
    update_expired_embargos = invenio_rdm_records.jobs.jobs:update_expired_embargos_cls

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = invenio_rdm_records/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping_file = babel.ini
output_file = invenio_rdm_records/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_rdm_records/translations/messages.pot
output_dir = invenio_rdm_records/translations/

[update_catalog]
input_file = invenio_rdm_records/translations/messages.pot
output_dir = invenio_rdm_records/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_rdm_records --cov-report=term-missing
testpaths = docs tests invenio_rdm_records
